fixed horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 body {
   font-family: "DM Sans", sans-serif;
-  width: 100vw;
+  max-width: 100vw;
  /* scroll-behavior: smooth; */
  }
 
